--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,4 @@
 [pytest]
-addopts = -v --maximize
+addopts = -v --maximize --alluredir allure-results
+log_format = %(asctime)s %(levelname)s %(message)s %(filename)s %(funcName)s %(lineno)s
+log_date_format = %Y-%m-%d %H:%M:%S
