add api tests, some ui tests and db connect

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = -v --maximize --alluredir allure-results
+addopts = -v --maximize --alluredir allure-results --color=no
 log_format = %(asctime)s %(levelname)s %(message)s %(filename)s %(funcName)s %(lineno)s
 log_date_format = %Y-%m-%d %H:%M:%S
